try linux