@@ -2,3 +2,17 @@
 
 ## todo
 - ...
+
+## Building
+```
+jdeps --class-path 'libs/*' --multi-release base -recursive --ignore-missing-deps --print-module-deps ilivalidator-1.11.10.jar
+```
+
+```
+jlink --add-modules java.base,java.desktop,java.management,java.sql --output ilivalidator-jre
+```
+
+```
+jpackage --icon icon-ilivalidator-128x128.icns --name ilivalidator --type dmg --input libs --main-jar ilivalidator-1.11.10.jar --main-class org.interlis2.validator.Main -d output --runtime-image ilivalidator-jre --app-version 1.11.10 --java-options -Xmx2g 
+
+```
